--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -4,6 +4,8 @@ env:
 
 build_task:
   matrix:
+    # Image list available via
+    # gcloud compute images list --project freebsd-org-cloud-dev --no-standard-images
     freebsd_instance:
       image_family: freebsd-12-4
     freebsd_instance:
