--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -11,12 +11,15 @@ build_task:
     freebsd_instance:
       image_family: freebsd-13-2
     freebsd_instance:
-      image_family: freebsd-14-0-snap
+      image_family: freebsd-14-0
+    freebsd_instance:
+      image_family: freebsd-15-0-snap
   prepare_script:
     - pkg install -y autoconf automake libtool gettext-runtime gmake ksh93 py39-packaging py39-cffi py39-sysctl
   configure_script:
     - env MAKE=gmake ./autogen.sh
-    - env MAKE=gmake ./configure --with-config="user" --with-python=3.9
+    # --with-config="all" to build kernel and userland bits
+    - env MAKE=gmake ./configure --with-config="all" --with-python=3.9
   build_script:
     - gmake -j `sysctl -n kern.smp.cpus`
   install_script:
