touch .cirrus.yml

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -12,16 +12,20 @@ build_task:
     compute_engine_instance:
       image: family/freebsd-15-0-snap
   info_script:
-    - uname -a
-    - gpart show
+    - "uname -a"
+    - "gpart show"
   prepare_script:
-    - pkg install -y autoconf automake libtool gettext-runtime gmake ksh93 py39-packaging py39-cffi py39-sysctl
+    - "pkg install -y autoconf automake libtool gettext-runtime gmake ksh93 py39-packaging py39-cffi py39-sysctl"
     # ensure that base zfs is not loaded
-    - kldunload zfs || true
+    - "kldunload zfs || true"
+    # fail if zfs is still loaded
+    - "! kldstat -q -m zfs"
   configure_script:
-    - env MAKE=gmake ./autogen.sh
-    - env MAKE=gmake ./configure --with-config="all" --with-python=3.9
+    - "env MAKE=gmake ./autogen.sh"
+    - "env MAKE=gmake ./configure --with-config=\"all\" --with-python=3.9"
   build_script:
-    - gmake -j$(sysctl -n kern.smp.cpus)
+    - "gmake -j$(sysctl -n kern.smp.cpus)"
   install_script:
-    - gmake install
+    - "gmake install"
+  load_kmod_script:
+    - "kldload openzfs.ko"
