--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -16,18 +16,5 @@ build_task:
   info_script:
     - "uname -a"
     - "gpart show"
-  prepare_script:
-    - "pkg install -y autoconf automake libtool gettext-runtime gmake ksh93 py39-packaging py39-cffi py39-sysctl"
-    # ensure that base zfs is not loaded
-    - "kldunload zfs || true"
-    # fail if zfs is still loaded
-    - "! kldstat -q -m zfs"
-  configure_script:
-    - "env MAKE=gmake ./autogen.sh"
-    - "env MAKE=gmake ./configure --with-config=\"all\" --with-python=3.9"
-  build_script:
-    - "gmake -j$(sysctl -n kern.smp.cpus)"
-  install_script:
-    - "gmake install"
-  load_kmod_script:
-    - "kldload openzfs.ko"
+    - "kldload zfs.ko"
+    - "dmesg"
